# mailsweep

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
schema/: config.schema.json  rules.schema.json
src/: auth.rs  config.rs  debug_auth.rs  graph_client.rs  main.rs  rules.rs
src/commands/: auth.rs  clean.rs  completions.rs  mod.rs  rules.rs
