[package]
name = "mailsweep"
version = "0.1.0"
edition = "2024"
description = "CLI tool to clean up Outlook inbox using Microsoft Graph API"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
oauth2 = "4.4"
time = { version = "0.3", features = ["serde", "formatting"] }
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
xdg = "2.5"
inquire = "0.6"
tabled = "0.15"
textwrap = "0.16"
terminal_size = "0.3"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
uuid = { version = "1.6", features = ["v4"] }
